--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <button type="button" class="btn btn-primary btn-lg btn-block" id="work">Work</button>
       </div>
       <div class="col-md-2">
-        <button type="button"  class="btn btn-primary btn-md btn-block myWork" id="tictactoe" ><a href="project1/ttt.html">Tic Tc Toe</a></button>
+        <button type="button"  class="btn btn-primary btn-md btn-block myWork" id="tictactoe" ><a href="./project1/tictactoe/index1.html">Tic Tc Toe</a></button>
      </div>
-     <div class="col-md-2">
+<!--      <div class="col-md-2">
         <button type="button"  class="btn btn-primary btn-md btn-block myWork" id="streamline" ><a href="streamline.html">Stream Line</a></button>
-     </div>
+     </div> -->
 
     </div>
 
@@ -57,26 +57,29 @@
         <button type="button"  class="btn btn-primary btn-lg btn-block" id="myResume"><a href="resume.html">Resume</a></button>
  
       </div>
+
     </div>
+
     <div class="row" id="social">
         <div class="col-lg-3">
-        <button type="button"  class="btn btn-primary btn-lg btn-block"  >Social Media</button>
-        </div>
-        <div class="col-lg-2" >
-        <button type="button"  class="btn btn-primary btn-md btn-block socialMedia" id="linkein">LinkeD*<i class="fa fa-linkedin"></i></button>
+          <button type="button"  class="btn btn-primary btn-lg btn-block"  >Social Media</button>
         </div>
 
-        <div class="col-lg-2 ">
+        <div class="col-lg-2 " >
+        <a href="https://www.linkedin.com/in/paresh-solanki-6377a0131/"><button type="button"  class="btn btn-primary btn-md btn-block socialMedia" id="linkein"><i class="fa fa-linkedin-square fa-lg"></i>LinkeDIn</button></a>
+        </div>
+
+     <!--    <div class="col-lg-2 ">
         <button type="button"  class="btn btn-primary btn-md btn-block socialMedia" id="twitter"><i class="fa fa-twitter"></i>@Twitter</button>
+        </div> -->
+
+        <div class="col-lg-2  ">
+        <a href="https://github.com/pareshsolanki29/"><button type="button"  class="btn btn-primary btn-md btn-block  socialMedia" id="github"><i class="fa fa-github fa-lg"></i>GitHub</button></a>
         </div>
 
-        <div class="col-lg-2 ">
-        <button type="button"  class="btn btn-primary btn-md btn-block socialMedia" id="github"><i class="fa fa-github center"></i>[GitHub]</button>
-        </div>
-
-        <div class="col-lg-2 ">
+   <!--      <div class="col-lg-2 ">
         <button type="button"  class="btn btn-primary btn-md btn-block socialMedia" id="instagram"><i class="fa fa-instagram"></i>#InstaGram</button>
-        </div>
+        </div> -->
 
         
            
