--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div clss="col-lg-12">
-	          <img src="images/resume.png">
+	          <img src="PareshSolanki_2017/image001.png">
 			</div>
 		</div>
 		<div class="row">
