adding some assesments

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </div>
 
     <div class="row" id="social">
-        <div class="col-lg-3">
-          <button type="button"  class="btn btn-primary btn-lg btn-block"  >Social Media</button>
+        <div class="col-lg-3" id="socialMedia">
+          <button type="button"   class="btn btn-primary btn-lg btn-block"  >Social Media</button>
         </div>
 
         <div class="col-lg-2 " >
